WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210647
REGRESSION (
r256756
): -[WKUserDefaults initWithSuiteName:]: Instance variable used while 'self' is not set to the result of '[(super or self) init...]'
https://bugs.webkit.org/show_bug.cgi?id=210647
Summary
REGRESSION (r256756): -[WKUserDefaults initWithSuiteName:]: Instance variable...
David Kilzer (:ddkilzer)
Reported
2020-04-17 03:22:57 PDT
-[WKUserDefaults initWithSuiteName:]: Instance variable used while 'self' is not set to the result of '[(super or self) init...]'. - (instancetype)initWithSuiteName:(NSString *)suitename { m_suiteName = suitename; m_observer = nil; return [super initWithSuiteName:suitename]; }
Attachments
Patch v1
(1.77 KB, patch)
2020-04-17 03:32 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-04-17 03:23:58 PDT
<
rdar://problem/61928289
>
David Kilzer (:ddkilzer)
Comment 2
2020-04-17 03:32:24 PDT
Created
attachment 396752
[details]
Patch v1
EWS
Comment 3
2020-04-17 08:02:26 PDT
Committed
r260251
: <
https://trac.webkit.org/changeset/260251
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 396752
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug