REGRESSION (r256756): -[WKUserDefaults initWithSuiteName:]: Instance variable used while 'self' is not set to the result of '[(super or self) init...]' <https://webkit.org/b/210647> <rdar://problem/61928289>

Reviewed by Anders Carlsson.

* UIProcess/Cocoa/PreferenceObserver.mm:
(-[WKUserDefaults initWithSuiteName:]):
- Call `[self initWithSuite:]` and set `self` to fix the clang
  static analyzer warning.
- Fix camelCase of `suitename` parameter.


Canonical link: https://commits.webkit.org/223524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260251 268f45cc-cd09-0410-ab3c-d52691b4dbfc