Source/WebKit/UIProcess/Cocoa/PreferenceObserver.mm
@@ -62,11 +62,14 @@
 {
 }
 
-- (instancetype)initWithSuiteName:(NSString *)suitename
+- (instancetype)initWithSuiteName:(NSString *)suiteName
 {
-    m_suiteName = suitename;
+    if (!(self = [super initWithSuiteName:suiteName]))
+        return nil;
+
+    m_suiteName = suiteName;
     m_observer = nil;
-    return [super initWithSuiteName:suitename];
+    return self;
 }
 @end
 
